welcome.lessons.welcome.bat.bool2.CigarParty.scala.error
cigarParty:3: error: not found: value cigares
    if (cigares>=40){
        ^cigarParty:11: error: not found: value cigares
    if (cigares>=40 && cigares<=60){
        ^cigarParty:11: error: not found: value cigares
    if (cigares>=40 && cigares<=60){
                       ^