welcome.lessons.welcome.bat.bool2.CigarParty.scala.code
def cigarParty(cigars:Int, isWeekend:Boolean):Boolean = {
  if (isWeekend){
    if (cigares>=40){
      return true
    }
    else{
      return false
    }
  }
  else {
    if (cigares>=40 && cigares<=60){
      return true
    }
    else{
      return false
  }
 }
}